--- a/reto-3-main/reto-3-main/src/main/resources/static/category.html
+++ b/reto-3-main/reto-3-main/src/main/resources/static/category.html
@@ -28,11 +28,11 @@
                 <input type="text" id="name" placeholder="Name" maxlength="45">
                 <input type="text" id="description" placeholder="Description" maxlength="250">
             </div>
-            <button id = "postCategory">Guardar!</button>
+            <button id = "postCategory" onclick="postGategory()">Guardar!</button>
         </div>
         <div>
             <h3>Lista de Categorias</h3>
-            <button id = "getCategories"> Consultar</button> 
+            <button id = "getCategories" onclick="getCategory()"> Consultar</button> 
             <table>
                 <thead>
                     <tr>
