--- a/reto-3-main/reto-3-main/src/main/resources/static/client.html
+++ b/reto-3-main/reto-3-main/src/main/resources/static/client.html
@@ -30,11 +30,11 @@
                 <input type="number" id="age" placeholder="Age">
                 <input type="password" id="password" placeholder="Password" maxlength="45">
             </div>
-            <button id = "postClient">Guardar!</button>
+            <button id = "postClient" onclick="postClient()">Guardar!</button>
         </div>
         <div>
             <h3>Lista de Clientes</h3>
-            <button id = "getClients"> Consultar</button> 
+            <button id = "getClients" onclick="getClients()"> Consultar</button> 
             <table>
                 <thead>
                     <tr>
