--- a/reto-3-main/reto-3-main/src/main/resources/static/cloud.html
+++ b/reto-3-main/reto-3-main/src/main/resources/static/cloud.html
@@ -31,11 +31,11 @@
                 <input type="text" id="name" placeholder="Name" maxlength="45">
                 <input type="text" id="description" placeholder="Description" maxlength="250">
             </div>
-            <button id = "postCloud">Guardar!</button>
+            <button id = "postCloud" onclick="postCloud()">Guardar!</button>
         </div>
         <div>
             <h3>Lista de Nubes</h3>
-            <button id = "getClouds"> Consultar</button> 
+            <button id = "getClouds" onclick="getClouds()"> Consultar</button> 
             <table>
                 <thead>
                     <tr>
