--- a/reto-3-main/reto-3-main/src/main/resources/static/message.html
+++ b/reto-3-main/reto-3-main/src/main/resources/static/message.html
@@ -28,11 +28,11 @@
                 <input type="text" id="messageText" placeholder="Text" max="250">
                 <select name="idCloud" id="idCloud"></select>
             </div>
-            <button id = "postMessage">Guardar!</button>
+            <button id = "postMessage" onclick="postMessage()">Guardar!</button>
         </div>
         <div>
             <h3>Lista de Mensajes</h3>
-            <button id = "getMessages"> Consultar</button> 
+            <button id = "getMessages" onclick="getMessage()"> Consultar</button> 
             <table>
                 <thead>
                     <tr>
